ionic (0.6.4) unstable; urgency=low

  * Force white text in popups
  * Make black really black in night theme
  * Fix one swipe requiring two swipes
  * Unify bookmark and chapter views
  * Accept donations via Nokia Store

 -- Akos Polster <akos@pipacs.com>  Mon, 26 Mar 2012 23:57:00 +0100

ionic (0.6.3) unstable; urgency=low

  * Restore swipe functionality
  * On Symbian, look deeper for books to import

 -- Akos Polster <akos@pipacs.com>  Tue, 20 Mar 2012 17:07:00 +0100

ionic (0.6.2) unstable; urgency=low

  * Symbian-only release, no code changes

 -- Akos Polster <akos@pipacs.com>  Fri, 9  Mar 2012 23:16:00 +0100

ionic (0.6.1) unstable; urgency=low

  * Add Donate button
  * Show settings on tap-and-hold

 -- Akos Polster <akos@pipacs.com>  Wed, 7  Mar 2012 16:44:00 +0100

ionic (0.6.0) unstable; urgency=low

  * Use common Symbian+Meego components

 -- Akos Polster <akos@pipacs.com>  Fri, 17 Feb 2012 21:00:00 +0100

ionic (0.5.6) unstable; urgency=low

  * Let the invoker show the splash screen
  * Maintain reading position after orientation change
  * Make library sorting case insensitive

 -- Akos Polster <akos@pipacs.com>  Sat, 14 Jan 2012 17:30:00 +0100

ionic (0.5.5) unstable; urgency=low

  * Don't hide toolbar when it should be visible
  * Make reading progress more visible in "night" mode
  * Don't underline dead links
  * Prevent flickering when loading new page
  * Handle keys without tapping first
  * Make bookmark icon more visible if "sand" theme is used
  * Update bookstore links
  * Don't allow non-HTML content item extensions for HTML content
  * At import, recursively search the home directory for books
  * Adjust Meego theme to match Ionic theme

 -- Akos Polster <akos@pipacs.com>  Sat, 29 Oct 2011 21:53:00 +0200

ionic (0.5.4) unstable; urgency=low

  * Add setting to hide the toolbar
  * Show reading progress
  * Update book links

 -- Akos Polster <akos@pipacs.com>  Sun, 23 Oct 2011 18:58:00 +0200

ionic (0.5.3) unstable; urgency=low
